--- a/rendering/styles.css
+++ b/rendering/styles.css
@@ -1,8 +1,8 @@
 body {
-    font-size: 22px;
+    font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;  
     line-height: 1.5;
-    background: papayawhip;
+    background: #FAF9F6;
     color: black
 }
 * {
@@ -17,8 +17,13 @@ body {
 
 .column {
     flex: 1;
-    padding: 20px;
-    height: 750px;
+    padding: 40px;
+    height: 850px;
+}
+
+.column2{
+  flex: 1;
+  column-gap: 40px; 
 }
 
 .top-row {
@@ -28,7 +33,7 @@ body {
 
 #container {
     height: 75%;
-    background-color: lightgray;
+    background-color: black;
 }
 
 /* button */
@@ -55,6 +60,7 @@ body {
   touch-action: manipulation;
   vertical-align: middle;
   white-space: nowrap;
+  height: 100%;
 }
 
 .button-3:focus:not(:focus-visible):not(.focus-visible) {
@@ -81,4 +87,8 @@ body {
 .button-3:active {
   background-color: #298e46;
   box-shadow: rgba(20, 70, 32, .2) 0 1px 0 inset;
+}
+
+.full {
+  width: 100%;
 }
